# model-deployment-session4

./: classification_iris.ipynb  data_ingestion.py  evaluation.py  mlflow.db  pre_processing.py  pyproject.toml  requirements.txt  test.csv  train.csv
.ipynb_checkpoints/: classification_iris-checkpoint.ipynb  pipeline-checkpoint.py  test-checkpoint.csv  train-checkpoint.csv  train-checkpoint.py
mlruns/1/models/m-14f44fbbbad54f64ae9470e7c693550e/artifacts/: MLmodel
mlruns/1/models/m-a39d9d5bd630438191b332d405c05dca/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/1/models/m-b16fe41f9c404345ab6bd72efaa65245/artifacts/: MLmodel  model.pkl  requirements.txt
mlruns/1/models/m-d928eda9310b43aaad96939988765325/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-d95d3717beb24cbbb4f853e3dda9a151/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-e17d525090db429f98f83a9d35e4dcee/artifacts/: MLmodel  model.pkl
