[project]
name = "model-deployment-session4"
version = "0.1.0"
description = "Session 4: Model Deployment with Streamlit and MLflow"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "pandas",
    "numpy",
    "altair",
    "mlflow",
    "scikit-learn",
]

[tool.uv]
managed = true
